--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="000.jpg">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <meta property="og:image" content="img/000.jpg">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/common_styles.css">
     <link rel="stylesheet" href="css/general_style.css">
     <link rel="stylesheet" href="css/style_modal.css">
@@ -416,7 +416,7 @@
             </svg>
           </span>
           <!-- Ссылка на новостную страницу -->
-          <a href="https://vk.com/@new_s0ldier" target="_blank" class="btn-navbar btn-exc">
+          <a href="https://vk.com/@russiandem0n" target="_blank" class="btn-navbar btn-exc">
             <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd" d="M16.8 3.96a.87.87 0 00-.66.12l-.01.01-3.63 2.3v6.21l3.64 2.3a.88.88 0 001.1-.12.94.94 0 00.27-.66V4.88a.95.95 0 00-.14-.51.9.9 0 00-.56-.4zM11 12.54V6.46H5.48c-.82 0-1.56.34-2.1.89a3.06 3.06 0 00-.86 2.15c0 .84.33 1.6.87 2.15a2.92 2.92 0 002.09.88H11zm.96-7.57l3.36-2.13a2.37 2.37 0 011.82-.33 2.4 2.4 0 011.5 1.07c.24.4.37.85.37 1.3v9.25c0 .66-.26 1.27-.7 1.71a2.38 2.38 0 01-2.99.34l-3.37-2.14h-2.3l.19 1.04a2.43 2.43 0 01-.42 1.85 2.52 2.52 0 01-3.47.6 2.46 2.46 0 01-1.03-1.59l-.36-2a4.44 4.44 0 01-2.24-1.23 4.56 4.56 0 01-1.3-3.2c0-1.25.5-2.38 1.3-3.2a4.42 4.42 0 013.16-1.34h6.48zM6.1 14.03l.3 1.64a.96.96 0 00.4.62 1.02 1.02 0 001.4-.24.93.93 0 00.16-.71l-.23-1.31H6.1z" fill="currentColor">
               </path>
@@ -440,6 +440,51 @@
 
                     <h1>Мои фотокарточки</h1>
                     <div class="grid-container gallery">
+
+                      <div class="gallery-item">
+                        <img class='content grid-item buttons__img13' src='img/013.jpg'>
+                        <div class="modal_img" data-modal="_img13">
+                          <div class="modal_img_close">&times;</div>
+                          <img class="modal_img_content" src="img/013.jpg">
+                        </div>
+                        <p>"Будьте счастливы, несмотря ни на что!"</p>
+                      </div>
+
+                      <div class="gallery-item">
+                        <img class='content grid-item buttons__img12' src='img/012.jpg'>
+                        <div class="modal_img" data-modal="_img12">
+                          <div class="modal_img_close">&times;</div>
+                          <img class="modal_img_content" src="img/012.jpg">
+                        </div>
+                        <p>"Милашки.."</p>
+                      </div>
+
+                      <div class="gallery-item">
+                        <img class='content grid-item buttons__img11' src='img/011.jpg'>
+                        <div class="modal_img" data-modal="_img11">
+                          <div class="modal_img_close">&times;</div>
+                          <img class="modal_img_content" src="img/011.jpg">
+                        </div>
+                        <p>"Not sure if it's me.."</p>
+                      </div>
+
+                      <div class="gallery-item">
+                        <img class='content grid-item buttons__img10' src='img/010.jpg'>
+                        <div class="modal_img" data-modal="_img10">
+                          <div class="modal_img_close">&times;</div>
+                          <img class="modal_img_content" src="img/010.jpg">
+                        </div>
+                        <p>"No comments!"</p>
+                      </div>
+
+                      <div class="gallery-item">
+                        <img class='content grid-item buttons__img9' src='img/009.jpg'>
+                        <div class="modal_img" data-modal="_img9">
+                          <div class="modal_img_close">&times;</div>
+                          <img class="modal_img_content" src="img/009.jpg">
+                        </div>
+                        <p>"Меняем приоритеты.."</p>
+                      </div>
 
                       <div class="gallery-item">
                         <img class='content grid-item buttons__img8' src='img/008.jpg'>
@@ -544,7 +589,7 @@
                       <div class="answer">Здесь указаны основные данные обо мне (и не только). На самом деле, этот мини-сайт содержит слегка больше информации, чем может содержать обычная визитка - это, если быть откровенным, и была моя интенция - создать визитку, которая будет содержать не только контактные данные, но и также необходимый минимум информации, который я хочу, чтобы знали обо мне..</div>
 
                       <div class="question">А мне такую сделаешь?</div>
-                      <div class="answer">Я только начинаю испытывать себя в этом направлении. Но если у Вас, действоительно, появилось желание получить визит карту, похожую на мою, то, пожалуйста, пишите или звоните; вместе подумаем над этим вопросом. Мои контакты перед вашими глазами, но, желательно, писать мне в <a href="https://vk.com/write739352860" target="_blank" class="ls">личные сообщения</a> в ВКонтакте ;)</div>
+                      <div class="answer">Я только начинаю испытывать себя в этом направлении. Но если у Вас, действоительно, появилось желание получить визит карту, похожую на мою, то, пожалуйста, пишите или звоните; вместе подумаем над этим вопросом. Мои контакты перед вашими глазами, но, желательно, писать мне в <a href="https://vk.com/write664663452" target="_blank" class="ls">личные сообщения</a> в ВКонтакте ;)</div>
 
                   </div>
               </div>
@@ -580,17 +625,17 @@
           </a>
         </p>
         <h4 class="subtitle">Почта</h4>
-        <p class="my_contacts"><a href="mailto:a.v.makarov@internet.ru" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">a.v.makarov@internet.ru</a></p>
+        <p class="my_contacts"><a href="mailto:russiandem0n@icloud.com" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">russiandem0n@icloud.com</a></p>
         <h4 class="subtitle">Социальные сети</h4>
         <div class="my_contacts">
           <p class="my_contacts_soc">
-            <a href="https://vk.com/new_s0ldier" target="_blank">Vk.com <span>@new_s0ldier</span></a>
+            <a href="https://vk.com/russiandem0n" target="_blank">Vk.com <span>@russiandem0n</span></a>
           </p>
           <p class="my_contacts_soc">
-            <a href="https://instagram.com/brrriick" target="_blank">Instagram.com <span>@brrriick</span></a>
+            <a href="https://instagram.com/russiandem0n" target="_blank">Instagram.com <span>@russiandem0n</span></a>
           </p>
           <p class="my_contacts_soc">
-            <a href="https://t.com/brrriick" target="_blank">Telegram.com <span>@brrriick</span></a>
+            <a href="https://t.com/russiandem0n" target="_blank">Telegram.com <span>@russiandem0n</span></a>
           </p>
           <p class="my_contacts_soc">
             <a href="https://wa.me/79215097812" target="_blank">WhatsApp.com <span>@ +7 (921) 509-78-12</span></a>
@@ -599,13 +644,13 @@
         <!-- Иконы -->
         <p style="padding-top: 8px; font-size: 15px; color: #b3b3b3; text-align: center;">кликните иконку,<br>чтобы перейти к диалогу со мной</p>
         <div>
-          <a href="https://vk.me/new_s0ldier" class="icon">
+          <a href="https://vk.me/russiandem0n" class="icon">
             <img src="img/icon-vk.png">
           </a>
-          <a href="https://instagram.me/brrriick" class="icon">
+          <a href="https://instagram.me/russiandem0n" class="icon">
             <img src="img/icon-instagram.png">
           </a>
-          <a href="https://t.me/brrriick" class="icon">
+          <a href="https://t.me/russiandem0n" class="icon">
             <img src="img/icon-telegram.png">
           </a>
           <a href="https://wa.me/79215097812" class="icon">
@@ -634,11 +679,33 @@
         <span id="more0" class="more">
         <dl class="clear_fix profile_info_row ">
           <dt>Место занятости:</dt>
-          <dd>Сообщество "<a href="https://vk.com/newsoldat" target="_blank">NEWSOLDAT</a>" в соцсети ВКонтакте<br>Псков, с 2022 г.<br>Главный редактор журнала</dd>
+          <dd>Сообщество "<a href="https://vk.com/newsoldat" target="_blank">NEWSOLDAT</a>" в соцсети ВКонтакте<br>Псков, с 2022 г.<br>Главный редактор журнала
+            <!-- <div class="modal" data-modal="four">
+              <div class="modal_content">
+                <div class="modal_upinfo" style="display: flex; flex-wrap: wrap;">
+                  <div class="close_empty"></div>
+                  <div class="modal_close">&times;</div>
+                    <div class="modal_info">
+                      <h3>#ЖурналNEWSOLDAT</h3>
+                      <p>сообщества, в которых я занимаю долженность редактора</p>
+                      
+                      <a href="" target="_blank">NEWSOLDAT</a>
+                      <a href="" target="_blank">БРАТСТВО КРАПОВЫХ БЕРЕТОВ | БКБ</a>
+                      <a href="" target="_blank">Армия | СПЕЦНАЗ | ВДВ | ФСБ | ФЛОТ</a>
+                      <a href="" target="_blank">ВДВ | ДЕСАНТ</a>
+                      <a href="" target="_blank">ТАКТИКА СПЕЦНАЗА | СОВЕТЫ СПЕЦАЗА</a>
+                      <a href="" target="_blank">Вежливые люди</a>
+                      <a href="" target="_blank">Армия и НОВОСТИ</a>
+                      <a href="" target="_blank">ВООРУЖЁННЫЕ СИЛЫ РОССИИ</a>
+                    </div>
+                </div>
+              </div>
+            </div> -->
+          </dd>
         </dl>
         <dl class="clear_fix profile_info_row ">
           <dt>Место занятости:</dt>
-          <dd>Сообщество "<a href="https://vk.com/motowithlove" target="_blank">#МотоWithLove</a>" в соцсети ВКонтакте<br>Псков, с 2022 г.<br>Основатель, Владелец и Администратор</dd>
+          <dd>Сообщество "<a href="" target="_blank">#МотоWithLove</a>" в соцсети ВКонтакте<br>Псков, с 2022 г.<br>Основатель, Владелец и Администратор</dd>
         </dl>
         </span>
 
@@ -667,6 +734,10 @@
             <dl class="clear_fix profile_info_row ">
               <dt>Дата рождения:</dt>
               <dd>23 Января 2005</dd>
+            </dl>
+            <dl class="clear_fix profile_info_row ">
+              <dt>Знак зодиака:</dt>
+              <dd>Водолей</dd>
             </dl>
             <dl class="clear_fix profile_info_row ">
               <dt>Семейное положение:</dt>
@@ -699,7 +770,7 @@
             </dl>
             <dl class="clear_fix profile_info_row ">
               <dt>Увлечения:</dt>
-              <dd>Самообразование, Культуризм</dd>
+              <dd>Самообразование, Пайка, Web-разработка, 3D-моделирование, Культуризм</dd>
             </dl>
             <dl class="clear_fix profile_info_row ">
               <dt>Любимая музыка:</dt>
