--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
       
       <!-- Аватар и кнопки -->
       <div class="first_part">
-        <img src="img/IMG_E.png" class="avatar_img">
+        <img src="img/https://github.com/vladimir0vich/visit_card/blob/main/img/164E68E7-2AA6-4A72-AB97-5415705FCE18.jpeg" class="avatar_img">
         <a href="tel:+7 (921) 509-78-12" class="challenge">
           <button class="btn-style" style="margin: auto;">
             #СовершитьЗвонок
