--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <div class="column"> 
     <!-- ЗАГОЛОВОК СТРАНИЦЫ -->
-    <div class="cell" style="background: linear-gradient(#11171d, #25384a);">
+    <div class="cell" style="background: linear-gradient(#040607, #141e27);">
       <div class="header">
         <h1 style="text-shadow: 0px 0px 3px #00daae;">Андрей Владимирович Макаров</h1>
         <p style="color: #ffffffbf;">Ты - это то, что ты делаешь. Ты - это твой выбор. Тот, в кого себя превратишь.</p>
@@ -406,7 +406,7 @@
     </div>
 
     <!-- КОНТАКТЫ -->
-    <div class="cell" style="background: linear-gradient(#25384a, #11171d); display: flex; flex-wrap: wrap;">
+    <div class="cell" style="background: linear-gradient(#141e27, #040607); display: flex; flex-wrap: wrap;">
       
       <!-- Аватар и кнопки -->
       <div class="first_part">
