--- a/index.html
+++ b/index.html
@@ -428,19 +428,19 @@
         <h4>Мои контакты:</h4>
         <h4 class="subtitle">Телефон</h4>
         <p class="my_contacts">
-          <a href="tel:+7 (995) 449-23-01">
+          <a href="tel:+7 (995) 449-23-01" style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">
             +7 (995) 449-23-01
           </a>
         </p>
         <h4 class="subtitle">Почта</h4>
         <p class="my_contacts">
-          <a href="mailto:soberdreamer@mail.ru" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
+          <a href="mailto:soberdreamer@mail.ru" style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">
             soberdreamer@mail.ru
           </a>
         </p>
         <h4 class="subtitle">Личный web-сайт</h4>
         <p class="my_contacts">
-          <a href="https://vladimir0vich.github.io/own_website/" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
+          <a href="https://vladimir0vich.github.io/own_website/" style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">
             https://vladimir0vich.github.io/own_website/
           </a>
         </p>
